--- a/index.html
+++ b/index.html
@@ -3,12 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title>Caden Griffin | WDD 130</title>
 </head>
 <body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
-
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Caden Griffin | WDD 130</h1>
+        <img src="images/profile.jpg" alt="Hello! My name is Caden Griffin.">
+        <p>My name is Caden Griffin. I live in Utah and I like to spend time with my family and friends.</p>
+    </main>
+    <footer>
+        <p>©2025 | Caden Griffin | Utah</p>
+    </footer>
 </body>
 </html>
