--- a/week02/block-vs-inline.html
+++ b/week02/block-vs-inline.html
@@ -15,17 +15,17 @@
             boundaries.</p>
 
         <h2>Task 1: Swap Block and Inline Elements</h2>
-        <div>In the HTML of this document, change this div element to a span element.</div>
+        <span>In the HTML of this document, change this div element to a span element.</div>
 
         <p class="question">What happens to the layout? Does it still take up the full width?</p>
 
         <h2>Task 2: Nesting Inline in Block</h2>
-        <p>A paragraph &lt;p&gt; element (block) with a <span>&lt;span&gt; element;</span></p>
+        <p><span>hello</span> A paragraph &lt;p&gt; <strong>hey</strong> element <em>hi</em> (block) with a <span>&lt;span&gt; element;</span></p>
         <p class="question">Add another inline element like &lt;em&gt; or &lt;strong&gt; inside the paragraph. Observe
             how it flows within the line.</p>
 
         <h2>Task3: Nesting Block in Inline</h2>
-        <span>Try placing a &lt;div&gt; inside a &lt;span&gt; element.</span>
+        <span>Try placing a &lt;div&gt; <div> I see a layout issue because div is a block element which makes them split into two lines</div> a &lt;span&gt; element.</span>
             <p class="question">What error or layout issue do you see? Why does this happen?</p>
 
 
