week 2 home page enhancement

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caden Griffin | WDD 130</title>
+    <meta> name="description" content="Caden Griffin, WDD 130, Home Page">
+    <meta> name="author" content="Caden Griffin">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
@@ -18,6 +20,11 @@
         <img src="images/profile.jpg" alt="Hello! My name is Caden Griffin.">
         <p>My name is Caden Griffin. I live in Utah and I like to spend time with my family and friends.</p>
     </main>
+    <aside>
+        <h2>United States of America</h2>
+        <img src="images/americanflag.png" alt="Picture of the United States of America's flag.">
+        <p>The United States of America is a country founded in 1776. It's population is over 340 million people. The United States of America is made up of 50 states. It has a wide range of landscapes, from deserts and mountains to forests and coastlines.</p>
+    </aside>
     <footer>
         <p>©2025 | Caden Griffin | Utah</p>
     </footer>
