--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caden Griffin | WDD 130</title>
-    <meta> name="description" content="Caden Griffin, WDD 130, Home Page">
-    <meta> name="author" content="Caden Griffin">
+    <meta name="description" content="Caden Griffin's BYU-Idaho WDD 130 course home page">
+    <meta name="author" content="Caden Griffin">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
