--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Caden Griffin | WDD 130</title>
-    <meta name="description" content="Caden Griffin's BYU-Idaho WDD 130 course home page">
-    <meta name="author" content="Caden Griffin">
+    <title>Caden Barnett Griffin | WDD 130 </title>
+    <meta name="description" content="Caden Barnett Griffin's BYU-Idaho WDD 130 course home page">
+    <meta name="author" content="Caden Barnett Griffin">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
