--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Caden Barnett Griffin | WDD 130 </title>
-    <meta name="description" content="The homepage of Caden Barnett Griffin BYU-Idaho's WDD 130 course home page, where it displays a picture of Caden, where he lives, and what he likes to do.">
-    <meta name="author" content="Caden Barnett Griffin">
+    <title>Caden | WDD 130 </title>
+    <meta name="description" content="The homepage of Caden BYU-Idaho's WDD 130 course home page, where it displays a picture of Caden, where he lives, and what he likes to do.">
+    <meta name="author" content="Caden">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
