Week 2 Home Page Enhancement

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caden Barnett Griffin | WDD 130 </title>
-    <meta name="Caden Barnett Griffin" content="The homepage of Caden Barnett Griffin BYU-Idaho's WDD 130 course home page, where it displays a picture of Caden, where he lives, and what he likes to do.">
-    <meta name="Caden Barnett Griffin" content="Caden Barnett Griffin">
+    <meta name="description" content="This is the homepage of Caden Barnett Griffin, who is taking BYU-Idaho's WDD 130 course home page, where it displays a picture of Caden, where he lives, and what he likes to do.">
+    <meta name="author" content="Caden Barnett Griffin">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
