--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caden Barnett Griffin | WDD 130 </title>
-    <meta name="description" content="This is the home page of Caden Barnett Griffin, who is taking BYU-Idaho's WDD 130 course home page, where it displays a picture of Caden, where he lives, and what he likes to do.">
+    <meta name="description" content="This is the home page of Caden Barnett Griffin, who is taking BYU-Idaho's WDD 130 course home page, where it displays a picture of Caden">
     <meta name="author" content="Caden Barnett Griffin">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
