Week 2 Home Page Enhancement Fix

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Caden Barnett Griffin | WDD 130 </title>
-    <meta name="description" content="This is the home page of Caden Barnett Griffin, who is taking BYU-Idaho's WDD 130 course home page, where it displays a picture of Caden">
-    <meta name="author" content="Caden Barnett Griffin">
+    <title> Caden Griffin | WDD 130 </title>
+    <meta name="description" content="This is the home page of Caden Griffin, who is taking BYU-Idaho's WDD 130 course home page, where it displays a picture of Caden">
+    <meta name="author" content=" Caden Griffin">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
         </nav>
     </header>
     <main>
-        <h1>Caden Griffin | WDD 130</h1>
+        <h1> Caden Griffin | WDD 130</h1>
         <img src="images/profile.jpg" alt="Hello! My name is Caden Griffin.">
         <p>My name is Caden Griffin. I live in Utah and I like to spend time with my family and friends.</p>
     </main>
