Week 2 Home Page Enhancement

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Caden Griffin| WDD 130 </title>
-    <meta name="description" content="This is the home page of Caden Griffin, who is taking BYU-Idaho's WDD 130 course home page, where it displays a picture of Caden">
+    <title>WDD 130 | Caden Griffin</title>
+    <meta name="description" content="This is the home page of Caden Griffin, a student in WDD 130 at BYU-Idaho. It includes a brief introduction and a picture of Caden.">
     <meta name="author" content="Caden Griffin">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
