--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- 13 November 2025 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,20 +8,29 @@
     <meta name="description" content="This is the home page of Caden Griffin, a student in WDD 130 at BYU-Idaho. It includes a brief introduction and a picture of Caden.">
     <meta name="author" content="Caden Griffin">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
+            <a href="https://linkedin.com">Linkedin</a>
+            <a href="https://facebook.com">Facebook</a>
         </nav>
     </header>
     <main>
         <h1> Caden Griffin | WDD 130</h1>
         <img src="images/profile.jpg" alt="Hello! My name is Caden Griffin.">
         <p>My name is Caden Griffin. I live in Utah and I like to spend time with my family and friends.</p>
+        <ul class="box indent">
+            <li><a href="https://www.churchofjesuschrist.org/imgs/7210c09be95c4474772ae52e5f31c23c08112784/full/640%2C/0/default" target="_blank">Aba Nigeria Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/imgs/154ee0c38f920aa66074c0338fe29f535e0d0a65/full/640%2C/0/default" target="_blank">Brigham City Utah Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/imgs/0871c25e05d9ad7a649fba4ce0cffcb112f0aed7/full/640%2C/0/default" target="_blank">Fort Lauderdale Florida Temple</a></li></ul>
     </main>
-    <aside>
+    <aside class="box">
         <h2>United States of America</h2>
         <img src="images/americanflag.png" alt="Picture of the United States of America's flag.">
         <p>The United States of America is a country founded in 1776. It's population is over 340 million people. The United States of America is made up of 50 states. It has a wide range of landscapes, from deserts and mountains to forests and coastlines.</p>
