W03 Assignment: Rafting Site

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Welcome to our white water rafting website! Here you can plan trips, find out more about us, and contact us.">
-    <meta name="author" content="Caden Griffin">
+    <meta name="author" content=" Caden Griffin ">
     <link rel="stylesheet" href="styles/rafting.css">
+    <title>White Water Rapids</title>
 </head>
 <body>
     <header>
@@ -36,7 +37,7 @@
     </section>
 </main>
 <footer>
-    <p> ©️ | White Water Rapids | Caden Griffin</p>
+    <p> ©️2025 | White Water Rapids | Caden Griffin </p>
     <nav class="socialmedia">
         <a href="https://facebook.com">
             <img src="images/facebooklogo.svg" alt="Facebook Logo">
@@ -50,3 +51,4 @@
     </nav>
 </footer>
 </body>
+</html>
