W03 Assignment: Rafting Site – About Us Page

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Welcome to our white water rafting website! Here you can plan trips, find out more about us, and contact us.">
     <meta name="author" content=" Caden Griffin ">
     <link rel="stylesheet" href="styles/rafting.css">
-    <title>White Water Rapids</title>
+    <title>About Us | White Water Rapids</title>
 </head>
 <body>
     <header>
