--- a/index.html
+++ b/index.html
@@ -21,20 +21,24 @@
             <a href="https://facebook.com">Facebook</a>
         </nav>
     </header>
-    <main>
-        <h1> Caden Griffin | WDD 130</h1>
-        <img src="images/profile.jpg" alt="Hello! My name is Caden Griffin.">
-        <p>My name is Caden Griffin. I live in Utah and I like to spend time with my family and friends.</p>
-        <ul class="box indent">
-            <li><a href="https://www.churchofjesuschrist.org/imgs/7210c09be95c4474772ae52e5f31c23c08112784/full/640%2C/0/default" target="_blank">Aba Nigeria Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/imgs/154ee0c38f920aa66074c0338fe29f535e0d0a65/full/640%2C/0/default" target="_blank">Brigham City Utah Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/imgs/0871c25e05d9ad7a649fba4ce0cffcb112f0aed7/full/640%2C/0/default" target="_blank">Fort Lauderdale Florida Temple</a></li></ul>
-    </main>
-    <aside class="box">
-        <h2>United States of America</h2>
-        <img src="images/americanflag.png" alt="Picture of the United States of America's flag.">
-        <p>The United States of America is a country founded in 1776. It's population is over 340 million people. The United States of America is made up of 50 states. It has a wide range of landscapes, from deserts and mountains to forests and coastlines.</p>
-    </aside>
+    <div class="grid">
+        <main>
+            <h1> Caden Griffin | WDD 130</h1>
+            <img src="images/profile.jpg" alt="Hello! My name is Caden Griffin.">
+            <p>My name is Caden Griffin. I live in Utah and I like to spend time with my family and friends.</p>
+            <ul class="box indent">
+                <li><a href="https://www.churchofjesuschrist.org/imgs/7210c09be95c4474772ae52e5f31c23c08112784/full/640%2C/0/default" target="_blank">Aba Nigeria Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/imgs/154ee0c38f920aa66074c0338fe29f535e0d0a65/full/640%2C/0/default" target="_blank">Brigham City Utah Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/imgs/0871c25e05d9ad7a649fba4ce0cffcb112f0aed7/full/640%2C/0/default" target="_blank">Fort Lauderdale Florida Temple</a></li>
+            </ul>
+        </main>
+
+        <aside class="box">
+            <h2>United States of America</h2>
+            <img src="images/americanflag.png" alt="Picture of the United States of America's flag.">
+            <p>The United States of America is a country founded in 1776. It's population is over 340 million people. The United States of America is made up of 50 states. It has a wide range of landscapes, from deserts and mountains to forests and coastlines.</p>
+        </aside>
+    </div>
     <footer>
         <p>©2025 | Caden Griffin | Utah</p>
     </footer>
