week 4 water rafting

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <img src="images/rapids.jpeg" alt="Picture of the White Water Rapids logo.">
-        <nav>
+        <nav class="buttons">
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
             <a href="trips.html">Trips</a>
@@ -28,12 +28,35 @@
             <p>Company purpose, mission, creed, motto, etc</p>
         </article>
     </div>
-    <section>
+    <section class ="history">
         <h2>History</h2>
+        <img src="images/raftinghistory.jpg" alt="Picture of a river raft.">
         <p>Brief history of the company</p>
     </section>
-    <section>
+    <section class ="adventures">
         <h2>Adventure Awaits You!</h2>
+        <div class="adventurepics">
+        <figure>
+            <img src="images/smallwaterfall.jpg" alt="Picture of a small waterfall.">
+            <figcaption>The Drop</figcaption>
+        </figure>
+        <figure>
+            <img src="images/rockyrapids.jpg" alt="Picture of a rock in a river.">
+            <figcaption>Rocky Rapids</figcaption>
+        </figure>
+        <figure>
+            <img src="images/rockyshore.jpg" alt="Picture of a rocky shore.">
+            <figcaption>Rocky Shore</figcaption>
+        </figure>
+        <figure>
+            <img src="images/foresttwist.jpg" alt="Picture of river in forest.">
+            <figcaption>Forest Twist</figcaption>
+        </figure>
+        <figure>
+            <img src="images/mountainrush.jpg" alt="Picure of river running down a mountain.">
+            <figcaption>Mountain Rush</figcaption>
+        </figure>
+        </div>
     </section>
 </main>
 <footer>
