--- a/week05/poll-form.html
+++ b/week05/poll-form.html
@@ -4,25 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/poll-form.css">
 </head>
 <body>
     <main>
         <form>
-            <label for="fullname">Full Name:</label>
-            <input type="text" id="fullname" name="fullname" required>
-            <label for="useremail">Email:</label>
-            <input type="email" id="useremail" name="useremail" required>
+            <div class="form-item column2">
+                <label for="fullname">Full Name:</label>
+                <input type="text" id="fullname" name="fullname" required>
+            </div>
+            <div class="form-item column2">
+                <label for="useremail">Email:</label>
+                <input type="email" id="useremail" name="useremail" required>
+            </div>
 
-            <label for="quantity">Select Quantity</label>
-            <select name="quantity" id="quantity">
-            <option value="1">One</option>
-            <option value="2">Two</option>
-            <option value="3">Three</option>
-            </select>
-            <label for="browser">What is your favorite internet browser?</label>
-<select id="browser" name="browser">
-  <option value="chrome">Chrome</option>
-  <option value="firefox">Firefox</option>
+                <label for="quantity">Select Quantity</label>
+                <select name="quantity" id="quantity">
+                <option value="1">One</option>
+                <option value="2">Two</option>
+                <option value="3">Three</option>
+                </select>
+                <label for="browser">What is your favorite internet browser?</label>
+                <select id="browser" name="browser">
+                <option value="chrome">Chrome</option>
+                <option value="firefox">Firefox</option>
   <option value="edge">Edge</option>
   <option value="brave">Brave</option>
   <option value="other">Other</option>
