week 5 rafting site

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Welcome to our contact page.">
+    <meta name="description" content="Welcome to our contact page. Here you can contact employees and join the newsletter.">
     <meta name="author" content=" Caden Griffin ">
     <link rel="stylesheet" href="styles/rafting.css">
     <title>Contact Us | White Water Rapids</title>
@@ -52,8 +52,7 @@
             <input type="checkbox" name="newsletter" id="newsletter">
             <button type="submit">Get in Touch!</button>
         </form>
-        </div>
-    </section>
+        </section>
     <section class="adventures">
         <h2>We Are Here to Serve You</h2>
         <div class="employeepics">
